--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -89,15 +89,15 @@ button {
     width: 150px;
     padding-top: 10px;
 }
-.input {
+.cstm-dprt {
     float: left;
     width: 250px;
 }
-#userid, #password, #passwordConfirm, .dropdown {
+#userid, #password, #passwordConfirm, .drop-down {
     width: 250px;
     height: 30px;
 }
-.dropdown {
+.drop-down {
     margin: 5px 0;
     padding-left: 10px;
     font-size: 20px;
