--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,145 +1,43 @@
-/* all */
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Franklin Gothic Medium';
-  }
-html, body {
-    place-items: center;
-    overflow: hidden;
-    font-size: 20px;
-}
-input {
-    font-size: 20px;
-    margin: 5px 0;
-    padding: 0 10px;
-}
-textarea {
-    font-size: 20px;
-    padding: 10px;
-    line-height: 35px;
-}
-.container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;     /* Arrange children vertically */
-}
-li, a {
-    text-decoration: none;
-    color: inherit;
-}
-button {
-    height: 30px;
-    margin: 20px 10px 20px 0;
-    padding: 0 20px;
-    font-size: 18px;
-}
-
-/* nav */
-.cfa::after {
-    content: "";
-    display: block;
-    clear: both;
-}
-.nav {
-    width: 900px;
-    height: 95px;
-}
-.toy-proj-name {
-    float: left;
-    margin-top: 30px;
-    font-size: 2em;
-    font-weight: 500;
-}
-.auth {
-    float: right;
-}
-.login {
-    margin: 50px 20px 0 0;
-}
-.user-id {
-    margin: 52px 50px 0 5px;   
-}
-.user-name {
-    margin: 45px 2px 0 0;   
-    font-size: 25px;
-}
-.nav-bottom {
-    width: 100%;
-    height: 5px;
-    background-color: #FFE869;;
-}
-
-/* footer */
-.thanks {
-    padding: 30px;
-    margin-top: 10px;
-    border-top: 2px solid #FFE869;
-    text-align: center;
-}
-
 /* login-join */
 .login-process, .join-process {
-    width: 400px;
+    width: 350px;
     padding-top: 60px;
 }
 .textbox-name {
     float: left;
-    width: 150px;
-    padding-top: 10px;
+    width: 120px;
+    padding-top: 8px;
 }
-.cstm-dprt {
+.id-pass {
     float: left;
-    width: 250px;
+    width: 230px;
 }
 #userid, #password, #passwordConfirm, .drop-down {
-    width: 250px;
-    height: 30px;
+    width: 230px;
+    height: 25px;
 }
 .drop-down {
     margin: 5px 0;
     padding-left: 10px;
-    font-size: 20px;
+    font-size: 18px;
 }
 #button-login, #button-join {
     float: right;
-    width: 250px;
-    height: 30px;
+    width: 230px;
+    height: 25px;
     margin-right: 0;
 }
 .welcomeEmoji {
     float: left;
-    font-size: 150px;
-    margin: 20px 0;
+    font-size: 50px;
+    margin: 160px 0 0 0;
 }
 .welcomeText {
     float: left;
-    font-size: 60px;
-    margin: 120px 0 0 20px;
+    font-size: 25px;
+    margin: 190px 0 0 10px;
 }
 
-/* menu-contents */
-.menu {
-    margin-bottom: 30px;
-    background-color: #FFFBCB;
-    border-bottom-right-radius: 15px;
-    border-bottom-left-radius: 15px;
-}
-.menu-item {
-    float: left;
-    width: 250px;
-    height: 50px;
-    font-size: 25px;
-    text-align: center;
-    padding-top: 10px;
-    border-bottom-right-radius: 15px;
-    border-bottom-left-radius: 15px;
-}
-.selected-menu, .menu-item:hover {
-    background-color: #FFE869;
-    font-weight: bold;
-}
 #contents {
     display: flex;
     align-items: center;
@@ -167,15 +65,11 @@ button {
 .menu-item-name {
     width: 1000px;
     margin: 25px 0 15px;
-    font-size: 30px;
+    font-size: 22px;
 }
 .info {
     width: 900px;
     border-bottom: #77D1C9 2px solid;
-}
-.item-fl {
-    float: left;
-    padding: 15px 0;
 }
 .info-item-head, .checklist-item-head {
     background-color: #77D1C9;
@@ -227,5 +121,6 @@ button {
     display: none;
 }
 .info-button {
+    padding: 10px 20px;
     width: 890px;
 }
