--- a/src/main/resources/static/css/manager.css
+++ b/src/main/resources/static/css/manager.css
@@ -1,105 +1,4 @@
-/* all */
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Franklin Gothic Medium';
-  }
-html, body {
-    place-items: center;
-    overflow: hidden;
-    font-size: 20px;
-}
-input {
-    font-size: 20px;
-    margin: 5px 0;
-    padding: 0 10px;
-}
-textarea {
-    font-size: 20px;
-    padding: 10px;
-    line-height: 35px;
-}
-.container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;     /* Arrange children vertically */
-}
-li, a {
-    text-decoration: none;
-    color: inherit;
-}
-button {
-    height: 30px;
-    margin: 20px 10px 20px 0;
-    padding: 0 20px;
-    font-size: 18px;
-}
-.fl {
-    float: left;
-}
-
-/* nav */
-.cfa::after {
-    content: "";
-    display: block;
-    clear: both;
-}
-.nav {
-    width: 900px;
-    height: 95px;
-}
-.toy-proj-name {
-    float: left;
-    margin-top: 30px;
-    font-size: 2em;
-    font-weight: 500;
-}
-.auth {
-    float: right;
-}
-.login {
-    margin: 50px 20px 0 0;
-}
-.user-id {
-    margin: 52px 50px 0 5px;   
-}
-.user-name {
-    margin: 45px 2px 0 0;   
-    font-size: 25px;
-}
-.nav-bottom {
-    width: 100%;
-    height: 5px;
-    background-color: #FFE869;;
-}
-button {
-    height: 30px;
-    margin: 0;
-    font-size: 18px;
-}
-
 /* menu-contents */
-.menu {
-    margin-bottom: 30px;
-    background-color: #FFFBCB;
-    border-bottom-right-radius: 15px;
-    border-bottom-left-radius: 15px;
-}
-.menu-item {
-    float: left;
-    width: 250px;
-    height: 50px;
-    font-size: 25px;
-    text-align: center;
-    padding-top: 10px;
-    border-bottom-right-radius: 15px;
-    border-bottom-left-radius: 15px;
-}
-.menu-item:hover {
-    background-color: #FFE869;
-    font-weight: bold;
-}
 .menu-manager {
     background-color: #FFE869;
 }
@@ -112,13 +11,6 @@ button {
 .item-fl {
     float: left;
     padding: 15px 0;
-    text-align: center;
-}
-/* footer */
-.thanks {
-    padding: 30px;
-    margin-top: 10px;
-    border-top: 2px solid #FFE869;
     text-align: center;
 }
 
@@ -134,7 +26,7 @@ button {
     width: 220px;
     height: 30px;
     padding-left: 10px;
-    font-size: 20px;
+    font-size: 18px;
 }
 .cstm-dprt {
     float: left;
@@ -146,6 +38,10 @@ button {
     background-color: #d1f1ee;
     border: 2px solid #77D1C9;
     border-radius: 10px;
+}
+#dprt-chck-list {
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 .checklist, .DNSChecklist {
     width: 1000px;
