v.0.2.17 세관(국), 게시판 왼쪽 치우침, 스크롤 불가 현상 해결

--- a/src/main/resources/static/css/DNSChecklist.css
+++ b/src/main/resources/static/css/DNSChecklist.css
@@ -1,3 +1,9 @@
+#contents {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    overflow: auto;
+}
 .menu-DNSChecklist {
     background-color: #FFE869;
 }
